# bambu-mcp-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MCP_CLIENT_SERVER.md  README.md  TEST_RESULTS.md  WHY_MCP.md  pyproject.toml  test_basic.py  test_mcp_server.py
mcp_workspace/: balanced_profile.ini  fast_profile.ini  strong_profile.ini
src/bambu_mcp/: __init__.py  __main__.py  parser.py  server.py  slicer.py
